{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 123,
  "lineage": "0f23a41c-1e15-9182-da72-f70461ae5f84",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112851559:internet-gateway/igw-0515597b7fbc31f3d",
            "id": "igw-0515597b7fbc31f3d",
            "owner_id": "471112851559",
            "tags": {
              "Name": "lesson-7-igw"
            },
            "tags_all": {
              "Name": "lesson-7-igw"
            },
            "vpc_id": "vpc-0da6f3cbeb7e7eb7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0515597b7fbc31f3d",
            "id": "r-rtb-02eb3fc57a0d374de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02eb3fc57a0d374de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112851559:route-table/rtb-02eb3fc57a0d374de",
            "id": "rtb-02eb3fc57a0d374de",
            "owner_id": "471112851559",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lesson-7-public-rt"
            },
            "tags_all": {
              "Name": "lesson-7-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da6f3cbeb7e7eb7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03134d161414d7c4e",
            "route_table_id": "rtb-02eb3fc57a0d374de",
            "subnet_id": "subnet-01fad4b8fbb207269"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a4b96da9d242d66",
            "route_table_id": "rtb-02eb3fc57a0d374de",
            "subnet_id": "subnet-05496ae7129edef14"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112851559:subnet/subnet-01fad4b8fbb207269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fad4b8fbb207269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112851559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-public-1"
            },
            "tags_all": {
              "Name": "lesson-7-public-1"
            },
            "vpc_id": "vpc-0da6f3cbeb7e7eb7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112851559:subnet/subnet-05496ae7129edef14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05496ae7129edef14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112851559",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-7-public-2"
            },
            "tags_all": {
              "Name": "lesson-7-public-2"
            },
            "vpc_id": "vpc-0da6f3cbeb7e7eb7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:471112851559:vpc/vpc-0da6f3cbeb7e7eb7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d82c9521f66a6d51",
            "default_route_table_id": "rtb-063dccf7df600a9f0",
            "default_security_group_id": "sg-00ff27677b0cf2662",
            "dhcp_options_id": "dopt-0db0a4d7625e73b6a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da6f3cbeb7e7eb7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063dccf7df600a9f0",
            "owner_id": "471112851559",
            "tags": {
              "Name": "lesson-7-vpc"
            },
            "tags_all": {
              "Name": "lesson-7-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}